# ads_descrition_img_gemini

./: .env  main.py  pyproject.toml
